Create catalog module.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -33,4 +33,13 @@ h1,h2,h3,h4,h5,h6 {
 .red {
     background-color: darksalmon;
 }
+.container {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.plant {
+    padding: 30px;
+    margin: 20px;
+}
 
